fixed z-index of buttons overtop of header

--- a/css/styles.css
+++ b/css/styles.css
@@ -257,7 +257,6 @@ video {
 /* Button Type 2 */
 .btn-type-2 {
     position: relative;
-    z-index: 1000;
     pointer-events: auto;
     color: #fff;
     font-size: 25px;
@@ -267,7 +266,7 @@ video {
     /*animation: colorPulse 1.5s infinite ease-in-out;*/ /* background pulse only */
     cursor: pointer;
     position: relative;
-    z-index: 1000;
+    z-index: 999;
 }
 
     .btn-type-2:before {
@@ -277,7 +276,6 @@ video {
         top: -2px;
         left: -2px;
         background-size: 600%;
-        z-index: -1;
         filter: blur(5px);
         width: calc(100% + 4px);
         height: calc(100% + 4px);
@@ -313,7 +311,7 @@ video {
     }
 
     .btn-type-2:after {
-        z-index: -1;
+        
         content: '';
         position: absolute;
         width: 100%;
@@ -741,7 +739,7 @@ footer {
     cursor: pointer;
     font-size: 1.3rem;
     border-radius: 999px;
-    z-index: 1001;
+    z-index: 999;
     pointer-events: auto;
 }
 
